--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,28 @@ body {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 }
+
+.thin-scrollbar {
+	-ms-overflow-style: none;
+	scrollbar-width: thin;
+	scrollbar-color: #c1c1c1 transparent;
+}
+
+.thin-scrollbar::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+}
+
+.thin-scrollbar::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+.thin-scrollbar::-webkit-scrollbar-thumb {
+	background-color: #c1c1c1;
+	border-radius: 9999px;
+	min-height: 24px; /* makes thumb look smaller */
+}
+
+.thin-scrollbar::-webkit-scrollbar-thumb:hover {
+	background-color: #a8a8a8;
+}
